deployment/local/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: clio-ui-deployment
  name: clio-ui-deployment
spec:
  selector:
    matchLabels:
      app: clio-ui
  template:
    metadata:
      labels:
        app: clio-ui
    spec:
      containers:
        - image: #{APP_IMAGE}#
          name: container
          volumeMounts:
            - name: clio-ui-nginx-config-volume
              mountPath: "/etc/nginx/nginx.conf"
              subPath: "nginx.conf"
              readOnly: true
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 30m
              memory: 50M
            limits:
              cpu: 30m
              memory: 50M
      volumes:
        - name: clio-ui-nginx-config-volume
          configMap:
            name: clio-ui-nginx-conf
