deployment/local/clio-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: clio-ui-service
  name: clio-ui-service
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: clio-ui
  type: ClusterIP
